Fix dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #213547;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -23,7 +23,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #747bff;
 }
 
 body {
@@ -47,6 +47,7 @@ h1 {
 #sandbox {
   flex: 1;
   width: 100%;
+  background-color: #f9f9f9;
 }
 
 #simulation {
@@ -98,7 +99,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #f9f9f9;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -117,9 +118,7 @@ input {
   padding: 5px 12px;
   font-size: 14px;
   line-height: 20px;
-  color: #24292e;
   vertical-align: middle;
-  background-color: #ffffff;
   background-repeat: no-repeat;
   background-position: right 8px center;
   border: 1px solid #e1e4e8;
@@ -132,15 +131,18 @@ input:focus {
   outline: none;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #242424;
   }
   a:hover {
-    color: #747bff;
+    color: #535bf2;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #1a1a1a;
+  }
+  #sandbox {
+    background-color: #1a1a1a;
   }
 }
